# pratical-case-api

./: .env.example  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
src/: application.py
src/errors/: handler.py
src/models/: classify.py
src/processing/: classifier.py  nlp.py  replies.py
src/routes/: classify.py
src/utils/: file_util.py
